frontend/test/should_fail/constr_model_003.gm
node class Font {
	fontname   : string  = "Verdana";
	height     : int     = 10;
	bold       : boolean;
	italic     : boolean;
	underlined : boolean;

	Font(height, fontname="Arial", bold=false, italic=false, underlined=false);
	Font(fontname);
	Font(bold, height=12);
	Font(italic, fontname="Arial");  // Constructor with boolean as non-optional part already defined
}
